[gd_scene load_steps=13 format=2]

[ext_resource path="res://assets/visual/exit_button_white.png" type="Texture" id=1]
[ext_resource path="res://assets/visual/exit_button.png" type="Texture" id=2]
[ext_resource path="res://game/apps/news/NewsApp.gd" type="Script" id=3]
[ext_resource path="res://assets/audio/songs/BahamaVibeMusic.mp3" type="AudioStream" id=4]
[ext_resource path="res://components/continuous_music/ContinuousMusic.tscn" type="PackedScene" id=5]
[ext_resource path="res://assets/visual/ui/PatentApp_Theme.tres" type="Theme" id=6]
[ext_resource path="res://assets/visual/ui/PatentApp.tres" type="TileSet" id=7]
[ext_resource path="res://assets/visual/fonts/Magero.ttf" type="DynamicFontData" id=8]
[ext_resource path="res://assets/visual/inventions/patent02_loading_screen.png" type="Texture" id=9]
[ext_resource path="res://assets/visual/inventions/patent01_update.png" type="Texture" id=10]
[ext_resource path="res://assets/visual/apps/news_app_new_normal.png" type="Texture" id=11]

[sub_resource type="DynamicFont" id=1]
size = 24
outline_size = 1
outline_color = Color( 0.0156863, 0.0156863, 0.0156863, 1 )
font_data = ExtResource( 8 )

[node name="NewsApp" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
rect_pivot_offset = Vector2( 23.9588, 39.1609 )
script = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Background" type="ColorRect" parent="."]
margin_right = 320.0
margin_bottom = 160.0
color = Color( 0.756863, 0.784314, 0.854902, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="UI_Background" type="TileMap" parent="."]
modulate = Color( 0.27451, 0.317647, 0.376471, 1 )
tile_set = ExtResource( 7 )
cell_size = Vector2( 16, 16 )
format = 1
tile_data = PoolIntArray( 6, 29, 0, 7, 35, 0, 8, 35, 0, 9, 35, 0, 10, 35, 0, 11, 35, 0, 12, 35, 0, 13, 35, 0, 14, 35, 0, 15, 35, 0, 16, 35, 0, 17, 35, 0, 18, 35, 0, 19, 30, 0, 65542, 31, 0, 65543, 40, 0, 65544, 40, 0, 65545, 40, 0, 65546, 40, 0, 65547, 40, 0, 65548, 40, 0, 65549, 40, 0, 65550, 40, 0, 65551, 40, 0, 65552, 40, 0, 65553, 40, 0, 65554, 40, 0, 65555, 32, 0, 131076, 29, 0, 131077, 35, 0, 131078, 35, 0, 131079, 35, 0, 131080, 35, 0, 131081, 35, 0, 131082, 35, 0, 131083, 30, 0, 131084, 29, 0, 131085, 35, 0, 131086, 35, 0, 131087, 35, 0, 131088, 35, 0, 131089, 35, 0, 131090, 35, 0, 131091, 30, 0, 196612, 33, 0, 196613, 39, 0, 196614, 39, 0, 196615, 39, 0, 196616, 39, 0, 196617, 39, 0, 196618, 39, 0, 196619, 34, 0, 196620, 33, 0, 196621, 39, 0, 196622, 39, 0, 196623, 39, 0, 196624, 39, 0, 196625, 39, 0, 196626, 39, 0, 196627, 34, 0, 262148, 33, 0, 262149, 39, 0, 262150, 39, 0, 262151, 39, 0, 262152, 39, 0, 262153, 39, 0, 262154, 39, 0, 262155, 34, 0, 262156, 33, 0, 262157, 39, 0, 262158, 39, 0, 262159, 39, 0, 262160, 39, 0, 262161, 39, 0, 262162, 39, 0, 262163, 34, 0, 327684, 33, 0, 327685, 39, 0, 327686, 39, 0, 327687, 39, 0, 327688, 39, 0, 327689, 39, 0, 327690, 39, 0, 327691, 34, 0, 327692, 33, 0, 327693, 39, 0, 327694, 39, 0, 327695, 39, 0, 327696, 39, 0, 327697, 39, 0, 327698, 39, 0, 327699, 34, 0, 393220, 33, 0, 393221, 39, 0, 393222, 39, 0, 393223, 39, 0, 393224, 39, 0, 393225, 39, 0, 393226, 39, 0, 393227, 34, 0, 393228, 33, 0, 393229, 39, 0, 393230, 39, 0, 393231, 39, 0, 393232, 39, 0, 393233, 39, 0, 393234, 39, 0, 393235, 34, 0, 458756, 37, 0, 458757, 36, 0, 458758, 36, 0, 458759, 36, 0, 458760, 36, 0, 458761, 36, 0, 458762, 36, 0, 458763, 38, 0, 458764, 37, 0, 458765, 36, 0, 458766, 36, 0, 458767, 36, 0, 458768, 36, 0, 458769, 36, 0, 458770, 36, 0, 458771, 38, 0, 524292, 33, 0, 524293, 39, 0, 524294, 39, 0, 524295, 39, 0, 524296, 39, 0, 524297, 39, 0, 524298, 39, 0, 524299, 34, 0, 524300, 33, 0, 524301, 39, 0, 524302, 39, 0, 524303, 39, 0, 524304, 39, 0, 524305, 39, 0, 524306, 39, 0, 524307, 34, 0, 589828, 31, 0, 589829, 40, 0, 589830, 40, 0, 589831, 40, 0, 589832, 40, 0, 589833, 40, 0, 589834, 40, 0, 589835, 32, 0, 589836, 31, 0, 589837, 40, 0, 589838, 40, 0, 589839, 40, 0, 589840, 40, 0, 589841, 40, 0, 589842, 40, 0, 589843, 32, 0 )

[node name="UI_Foreground" type="TileMap" parent="."]
modulate = Color( 0.454902, 0.454902, 0.454902, 1 )
tile_set = ExtResource( 7 )
cell_size = Vector2( 16, 16 )
format = 1

[node name="ContinuousMusic" parent="." instance=ExtResource( 5 )]
stream = ExtResource( 4 )
music_name = "bahamas"

[node name="Back" type="TextureButton" parent="."]
margin_left = 5.65686
margin_top = 4.24265
margin_right = 21.6569
margin_bottom = 20.2426
rect_scale = Vector2( 2, 2 )
texture_normal = ExtResource( 2 )
texture_hover = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Title" type="Label" parent="."]
margin_left = 104.03
margin_top = -3.52547
margin_right = 259.03
margin_bottom = 26.4745
theme = ExtResource( 6 )
text = "News APP"
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Subtitle" type="Label" parent="."]
modulate = Color( 0.576471, 0.12549, 0.12549, 1 )
margin_left = 103.871
margin_top = 16.8892
margin_right = 331.871
margin_bottom = 46.8892
rect_scale = Vector2( 0.5, 0.5 )
theme = ExtResource( 6 )
text = "FIND THE LATEST Inventions"
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Invention_1" type="TextureRect" parent="."]
margin_left = 70.0
margin_top = 37.0
margin_right = 187.0
margin_bottom = 100.0
texture = ExtResource( 10 )
stretch_mode = 6
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SelectButton1" type="Button" parent="Invention_1"]
margin_left = 1.0
margin_top = 83.0
margin_right = 115.0
margin_bottom = 120.0
rect_pivot_offset = Vector2( 53.3974, 18.5 )
theme = ExtResource( 6 )
custom_colors/font_color_hover = Color( 1, 0.698039, 0.698039, 1 )
custom_colors/font_color_pressed = Color( 1, 0, 0, 1 )
custom_fonts/font = SubResource( 1 )
text = "SELECT"
flat = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="InventionLabel1" type="Label" parent="Invention_1"]
margin_top = 63.0
margin_right = 237.0
margin_bottom = 95.0
rect_scale = Vector2( 0.5, 0.5 )
theme = ExtResource( 6 )
text = "Updater"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Invention_2" type="TextureRect" parent="."]
margin_left = 199.177
margin_top = 37.0
margin_right = 316.177
margin_bottom = 100.0
texture = ExtResource( 9 )
stretch_mode = 6

[node name="Sue2" type="Button" parent="Invention_2"]
margin_left = -1.62201
margin_top = 83.0
margin_right = 112.378
margin_bottom = 120.0
rect_pivot_offset = Vector2( 53.3974, 18.5 )
theme = ExtResource( 6 )
custom_colors/font_color_hover = Color( 1, 0.698039, 0.698039, 1 )
custom_colors/font_color_pressed = Color( 1, 0, 0, 1 )
custom_fonts/font = SubResource( 1 )
text = "SELECT"
flat = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="InventionLabel2" type="Label" parent="Invention_2"]
margin_left = -1.0
margin_top = 63.0
margin_right = 237.0
margin_bottom = 94.0
rect_scale = Vector2( 0.5, 0.5 )
theme = ExtResource( 6 )
text = "Loading screen"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Logo" type="TextureRect" parent="."]
margin_left = 61.0
margin_right = 100.0
margin_bottom = 32.0
texture = ExtResource( 11 )
stretch_mode = 6
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="pressed" from="Back" to="." method="_on_Back_pressed"]
[connection signal="pressed" from="Invention_1/SelectButton1" to="." method="_on_SelectButton1_pressed"]
[connection signal="pressed" from="Invention_2/Sue2" to="." method="_on_Sue2_pressed"]
